feat: add animals fetch all
